# Experiment-with-OpenAI-OSS-Model

./: Makefile  README.md  agent.py  main.py  pyproject.toml  service.conf  viz.py
tools/: get-weather.json
